# PyQGLViewer

./: .gitignore  AUTHORS.txt  ChangeLog.txt  INSTALL.txt  PyQGLViewer.nsi  README.md  README.txt  appveyor.yml  configure.py  configureQt5.py  environment.yml  project.py  pyproject-linux.toml  pyproject-win.toml  pyproject.toml  setup.py  setup.py.old  travis.yml
.github/workflows/: conda-package-build.yml
conda/: bld.bat  build.sh  build.sh.old  conda_build_config.yaml  meta.yaml
doc/: INSTALL.txt  README.txt
examples/: animation.py  callback.py  cameraLight.py  clippingPlane.py  constrainedCamera.py  constrainedFrame.py  drawLight.py  fastDraw.py  frameTransform.py  frustumCulling.py  interface.py  keyFrames.py  keyboardAndMouse.py  luxo.py  manipulatedFrame.py  mouseGrabber.py  multiSelect.py  multiView.py  overpainting.py  plantgl_ex.py  qgllogo.py  screenCoordSystem.py  select.py  selection.py  selectwithsignal.py  simpleViewer.py  standardCamera.py  stereoViewer.py  texture3D.py  viewerInterface.Qt4.ui
examples/contribs/: anaglyph.py  background.py  cornerAxis.py  textureViewer.py  thumbnail.py
sip/PyQGLViewer/: PyQGLViewermod.sip  QGLViewerModuleConfig.sip  camera.sip  constraint.sip  domUtils.sip  keyFrameInterpolator.sip  manipulatedCameraFrame.sip  mouseGrabber.sip  qglviewer-qopenglwidget.sip  qglviewer.sip  qglviewerversion.sip
sipexamples/: word.cpp  word.h  word.sip  word_configure.py
src/: libQGLViewer-2.2.5-1-py.patch  libQGLViewer-2.2.6-3-py.patch  libQGLViewer-2.3.0-py.patch  libQGLViewer-2.3.1-py.patch  libQGLViewer-2.3.4-py.patch  libQGLViewer-2.3.9-py.patch
src/PyQGLViewer/: __init__.py
src/python/: PyQGLViewer.py
src/sip/: QGLViewerModule.sip  camera.sip  constraint.sip  domUtils.sip  frame.sip  keyFrameInterpolator.sip  manipulatedCameraFrame.sip  manipulatedFrame.sip  mouseGrabber.sip  qglviewer-qopenglwidget.sip  qglviewer.sip  qglviewerversion.sip  quaternion.sip  vec.sip
test/: test_pyqglviewer.py
