 # Specify the build system.
[build-system]
requires = ["sip", "PyQt-builder","setuptools", "setuptools-scm"]
build-backend = "sipbuild.api"


# enable dynamic version based on git tags
[tool.setuptools_scm]
# Format version to ease alignment with conda/meta.yaml tag-based versioning
fallback_version = "0.0.0.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

 # Specify a PyQt-based project.
#[tool.sip]
#project-factory = "pyqtbuild:PyQtProject"

# Specify the PEP 566 metadata for the project.
[project]
name = "PyQGLViewer"
version = "1.3.3.dev"
description = "Python bindings of libQGLViewer."
readme = "README.md"
authors = [
    { name = "Frédéric Boudon", email = "frederic.boudon@cirad.fr" }
]

[tool.sip.project]
sip-module = "PyQt5.sip"
sip-files-dir = "sip"

[tool.sip.bindings.PyQGLViewer]
qmake-QT = ['xml', 'opengl', 'gui', 'widgets']
tags = ['QGLViewer_2_9_1']
libraries = [ 'QGLViewer2  ; platform_system == "Windows"', 'opengl32 ; platform_system == "Windows"', 'glu32 ; platform_system == "Windows"' ]
extra-compile-args=['-I${CONDA_PREFIX}/include  ; platform_system == "Darwin"','-I${PREFIX}/include ; platform_system == "Darwin"']
extra-link-args=['-L${CONDA_PREFIX}/lib ; platform_system == "Darwin"','-L${PREFIX}/lib ; platform_system == "Darwin"']
