 # Specify the build system.
[build-system]
# "setuptools", "setuptools-scm" not used
requires = ["sip", "PyQt-builder"]
build-backend = "sipbuild.api"


# Specify the PEP 566 metadata for the project.
[project]
name = "PyQGLViewer"
# Version placeholder. Dynamic version set in project.py
version = "1.3.3.dev"
description = "Python bindings of libQGLViewer."
readme = "README.md"
authors = [
    { name = "Frederic Boudon", email = "frederic.boudon@cirad.fr" }
]

[tool.sip.project]
sip-module = "PyQt5.sip"
sip-files-dir = "sip"

[tool.sip.bindings.PyQGLViewer]
qmake-QT = ['xml', 'opengl', 'gui', 'widgets']
tags = ['QGLViewer_2_9_1']

# Could specified directly with new construct but currently only working on MacOS. Instead options set in project.py
# libraries = ['QGLViewer ; system_platform == "Linux"','GLU  ; system_platform == "Linux"']